Update: tweak correction overflow-x sur l'animation accueil te

--- a/Site web/style.css
+++ b/Site web/style.css
@@ -317,6 +317,7 @@ padding-left: 3em;
     color: whitesmoke;
     font-family: 'Montserrat';
     padding: 0;
+    overflow-x: hidden;
 }
 
 .te-accueil #grand-titre-technologies {
